--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-fast-marquee": "^1.3.5",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.2",
+    "react-rounded-image": "^2.0.15",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
+    "react-spring-3d-carousel": "^1.3.4",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
